--- a/src/component/LoginBtn/LoginBtn.css
+++ b/src/component/LoginBtn/LoginBtn.css
@@ -5,3 +5,12 @@
   border: none;
   font-weight: bold;
 }
+
+.login:hover {
+  background-color: rgb(177, 177, 177);
+  background-position: 100% 0;
+  moz-transition: all 0.4s ease-in-out;
+  -o-transition: all 0.4s ease-in-out;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+}
