Set up All rout in header

--- a/src/component/LoginBtn/LoginBtn.css
+++ b/src/component/LoginBtn/LoginBtn.css
@@ -6,6 +6,10 @@
   font-weight: bold;
 }
 
+.login {
+  background-color: aliceblue;
+}
+
 .login:hover {
   background-color: rgb(177, 177, 177);
   background-position: 100% 0;
