--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+p.lead {
+  font-size: 1.5rem;
+  font-weight: 400;
+}
+
 .container {
   max-width: 1140px;
   margin: 0 auto;
