--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,8 @@
   --light: #f3effe;
 }
 
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
-
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto", sans-serif !important;
   font-size: 16px;
   position: relative;
   min-height: 100vh;
