--- a/src/component/Footer/Footer.css
+++ b/src/component/Footer/Footer.css
@@ -1,10 +1,22 @@
-footer.bgp * {
-  color: var(--light);
+ul {
+  display: flex;
+  list-style-type: none;
+  margin: 0;
 }
 
-footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 4rem;
+.right-footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer {
+  padding: 16px 32px;
+  display: flex;
+  align-items: center;
+}
+
+.social {
+  display: flex;
+  margin-bottom: 0;
 }
