--- a/src/component/Recipes/Random.css
+++ b/src/component/Recipes/Random.css
@@ -7,6 +7,7 @@
   border-radius: 2rem;
   overflow: hidden;
   position: relative;
+  background-color: var(--main);
 }
 
 .card img {
@@ -23,4 +24,13 @@
 .card h4 {
   text-align: center;
   padding: 1rem;
+  color: aliceblue;
+}
+
+.card link {
+  text-decoration: none;
+}
+
+.wrapper {
+  margin: 0 5%;
 }
