--- a/src/pages/LoginPage/LoginPage.css
+++ b/src/pages/LoginPage/LoginPage.css
@@ -9,6 +9,11 @@
   margin-top: 50px;
 }
 
+.login-page {
+  background-image: url(https://cdn.pixabay.com/photo/2016/12/25/22/49/workout-1931107_1280.jpg);  
+  
+}
+
 form {
   display: flex;
   justify-content: center;
