--- a/src/pages/DashBoardPage/DashBoard.css
+++ b/src/pages/DashBoardPage/DashBoard.css
@@ -1,95 +1,111 @@
-.top-col {
+.sum-activity {
     display: flex;
 }
 
-.detail-activity {
+.top-sum-content {
     display: flex;
+}
+
+.bot-sum-content {
+    display: flex;
+}
+
+
+.image-sum-duration {
+    width: 80px;
+    height: 80px;
+    margin: auto;
+}
+
+.image-sum-duration img {
+    width: 100%;
+}
+
+.image-sum-energy {
+    width: 80px;
+    height: 80px;
+    margin: auto;
+}
+
+.image-sum-dis {
+    width: 80px;
+    height: 80px;
+    margin: auto;
+}
+
+.image-sum-dis img {
+    width: 100%;
+}
+
+.image-sum-energy img{
+    width: 100%;
+    height: 100%;
+}
+
+.image-sum-goal {
+    width: 80px;
+    height: 80px;
+    margin: auto;
+}
+
+.title-sum-duration, .sum-duration {
+    display: flex;
+    justify-content: center;
+    padding-top: 16px;
+    font-size: 1.05rem;
+    font-weight: bold;
+}
+
+.image-sum-goal img {
+    width: 100%;
+    height: 100%;
+}
+
+.sum-content {
+    margin: auto !important ;
+}
+
+.image-user {
+    margin: 64px auto;
+    width: 80px;
+    height: 80px;
+}
+
+.image-user img {
+    width: 100%;
+}
+
+.profile-content {
+    border: 3px solid #6F36BC;
+    border-radius: 30px;
+}
+
+.name-user-profile {
+    display: flex;
+    justify-content: center;
+}
+
+.detail-user-profile {
+    display: flex;
+    justify-content: space-around;
+    margin: 32px 0;
 }
 
 .row {
     margin: 16px 0;
 }
 
-.duration {
-    background-color: #6F36BC;
-    color: white;
-    font-weight: bold;
-    border-radius: 20px;
-    padding: 16px 16px;
-}
-
-.icon-duration {
-    /* width: 60px;
-    height: 60px; */
-    display: flex;
-    justify-content: center;
-}
-
-.icon-duration img {
-    /* width: 100%;
-    height: 100%; */
-    width: 60px;
-    height: 60px;
-}
-
-.title-activity {
-    display: flex;
-    justify-content: center;
-}
-
-.sub-title-activity {
-    display: flex;
-    justify-content: center;
-}
-
-.profile-user {
-    border: 2.5px solid #6F36BC;
-    padding: 8px 0px;
-    color: white;
-    border-radius: 16px;
-}
-
-.title-user {
-    display: flex;
-    justify-content: center;
-    color: black;
-}
-
-.sub-title {
-    color: black;
-}
-
-.info col {
-    display: flex;
-    justify-content: center;
-}
-
-.sub-title , .info-height {
-    display: flex;
-    justify-content: center;
-}
-
-.icon-user {
-    width: auto;
-    height: auto;
-    display: flex;
-    justify-content: center;
-}
-
-.icon-user img {
-    width: 180px;
-    height: 180px;
-    border-radius: 90px;
-}
-
-.info-height {
-    background-color: #6F36BC;
-    padding: 8px 0px;
-    border-radius: 24px;
-}
-
 .col {
     margin: 0 28px;
+}
+
+.duration-content {
+    background-color: #6F36BC;
+    width: 300px;
+    color: white;
+    margin: 16px;
+    padding: 24px;
+    border-radius: 30px;
 }
 
 .create-activity {
@@ -241,4 +257,39 @@ button.cancle {
     padding: 8px 16px;
     border-radius: 50%;
 
+}
+
+.deadline {
+    position: absolute;
+    font-size: 0.75rem;
+    margin-left: 4px;
+}
+
+.sum-name-user {
+    margin-top: 16px;
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
+.name-user-profile {
+    font-size: 1.25rem;
+    font-weight: bold;
+}
+
+.sum-height, .sum-weight, .sum-age {
+    display: flex;
+    justify-content: center;
+    background-color: #6F36BC;
+    color: white;
+    padding: 12px;
+    border-radius: 30px;
+    width: 90px;
+}
+
+.title-height, .title-weight, .title-age {
+    display: flex;
+    justify-content: center;
+    font-size: 1.25rem;
+    font-weight: bold;
+    margin-bottom: 16px;
 }
