--- a/src/component/Recipes/Random.css
+++ b/src/component/Recipes/Random.css
@@ -1,16 +1,17 @@
 .title {
-  margin: 20px 98px;
+  margin: 20px 0;
 }
 
 .card {
-  min-height: 25rem;
+  min-height: 20rem;
   border-radius: 2rem;
   overflow: hidden;
   position: relative;
+  background-color: #6f36bc;
 }
 
 .card img {
-  border-radius: 2rem;
+  border-radius: 2rem 2rem 0 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -20,7 +21,16 @@
   text-decoration: none;
 }
 
-.card h4 {
+.card h5 {
   text-align: center;
   padding: 1rem;
+  color: aliceblue;
+}
+
+.card link {
+  text-decoration: none;
+}
+
+.wrapper {
+  margin: 0 5%;
 }
