--- a/src/pages/DashBoardPage/DashBoard.css
+++ b/src/pages/DashBoardPage/DashBoard.css
@@ -156,6 +156,7 @@
 
 .btn-edit-del {
     margin-left: auto;
+    display: flex;
 }
 
 button.edit {
@@ -243,8 +244,6 @@ button.del {
 }
 
 button.done {
-    width: 100%;
-    height: 100%;
     background-color: #35C1A7;
     border: none;
     margin: 0px 12px;
@@ -254,8 +253,6 @@ button.done {
 }
 
 button.cancle {
-    width: 100%;
-    height: 100%;
     background-color: #E00B0B;
     border: none;
     color: white;
